--- a/myselector/templates/myselector/mycourse.html
+++ b/myselector/templates/myselector/mycourse.html
@@ -37,19 +37,19 @@
     <tbody>
     <tr>
         <td class="thumb">
-            <a href="/coach22/">
+            <a href="/coachdemo/">
                 <img class="thumbnail" src="{{ STATIC_URL }}myselector/images/normal.png"/>
             </a>
         </td>
         <td class="course-text">
-            <a href="/coach22/">
+            <a href="/coachdemo/">
                 <nobr>Winter 2014</nobr><br/>
                 <nobr>Sample eCoach Course</nobr><br/>    
                 <span class="label label-success">ACTIVE</span>
             </a>
         </td>
         <td class="button"> 
-            <a href="/coach22/">
+            <a href="/coachdemo/">
                 <button class="btn btn-large">Enter Coach</button>
             </a>
         </td>
